# uni-zk-verif-protocol

./: README.md
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.tsx
Frontend/src/components/: FileUpload.tsx  RuleConditionRow.tsx  TopNav.tsx
Frontend/src/context/: AppContext.tsx
Frontend/src/hooks/: mockBackend.ts
Frontend/src/pages/: GenerateProof.tsx  History.tsx  Home.tsx  RuleBuilder.tsx  SubmitProof.tsx  Upload.tsx
Frontend/src/types/: history.ts  rules.ts
docs/: Errorlogs.md  architect.md  mock.md  structure.md
offchain-api/: package-lock.json  package.json
offchain-api/src/: index.ts
prover/: Cargo.toml
prover-service/: package.json  tsconfig.json
prover-service/src/: index.ts  prover.ts
prover/src/: lib.rs  main.rs
prover/src/circuits/: mod.rs  square.rs
verifier-generator/: Cargo.toml
verifier-generator/halo2-circuits/src/: lib.rs
verifier-generator/prover/src/circuits/: enterprise.rs
verifier-generator/verifier-gen/: main.rs
